// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<Text
  theme={
    Object {
      "container": "src-shared-components-tc-communities-Text-___style__container___GqwT0",
    }
  }
>
  <div>
    content
  </div>
</Text>
`;

exports[`Snapshot match 2`] = `
<Text
  theme={
    Object {
      "container": "src-shared-components-tc-communities-Text-___style__container___GqwT0 container",
    }
  }
>
  <div>
    content
  </div>
</Text>
`;
